# autopilot

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  autopilot.example.md  blog-post-draft.md  index.html  mkdocs.yml  pilot.py  pyproject.toml  sitemap.xml
.archive/: tests_test_cli.py
.archive/autopilot/: __init__.py  __main__.py  cli.py  config.py  log.py  manifest.py  orchestrator.py
.archive/autopilot/agents/: deep-researcher.md
.archive/autopilot/runbooks/: python-cli.md
.dev/design/tasks/: task-006.md
.github/workflows/: ci.yml  docs.yml  release.yml
agent-roles/: index.html
agents/: planner.md
cli-reference/: index.html
concepts/: index.html
contributing/: index.html
docs/: agent-roles.md  cli-reference.md  concepts.md  contributing.md  getting-started.md  index.md  manifest-format.md
docs/content/: index.md
docs/content/css/: custom.css
docs/content/guides/: index.md  quick-start.md
docs/content/reference/: agent-roles.md  cli.md  index.md  manifest-format.md
docs/modes/: plan-mode.md  portfolio-mode.md  research-mode.md  roadmap-mode.md
docs/overrides/: main.html
getting-started/: index.html
manifest-format/: index.html
modes/plan-mode/: index.html
modes/portfolio-mode/: index.html
modes/research-mode/: index.html
modes/roadmap-mode/: index.html
search/: search_index.json
src/autopilot/: __init__.py  agent.py  cli.py  config.py  log.py  manifest.py  models.py  orchestrator.py  prompts.py
src/autopilot/agents/: critic.md  judge.md  planner.md  portfolio.md  prompts.py  researcher.md  roadmap.md  runner.py  strategist.md  worker.md
src/autopilot/domain/: clock.py  errors.py  eval.py  goal.py  ids.py  parse.py  persists.py  roadmap.py  sprint.py  task.py
src/autopilot/orchestrator/: evaluate.py  execute.py  plan.py  ralph.py
tests/: test_cli.py  test_manifest.py  test_ref_parser.py
tests/smoke/: a01-research.sh  a02-roadmap-create.sh  a03-roadmap-revise.sh  a04-sprint-plan.sh  a05-sprint-critique.sh  a06-sprint-judge.sh  a07-task-run.sh  a08-task-retry.sh  a09-eval-show.sh  a10-eval-run.sh  ast-lint.py  ast-lint.sh  f1-kill-resume.sh  f2-atomic-write.sh  f3-concurrent.sh  project-inference.sh  role-alignment.sh  roundtrip.sh  run.sh  s1-smithers.sh  s2-homer.sh  s3-ralph.sh  s4-failure.sh  s5-chaining.sh  strict-parse.sh  yq.py
tests/smoke/case-studies/: README.md
tests/smoke/case-studies/cadence/seed/: README.md  pyproject.toml
tests/smoke/case-studies/cadence/seed/app/: main.py
tests/smoke/case-studies/cadence/seed/tests/: test_main.py
tests/smoke/fixture/: pyproject.toml
tests/smoke/fixture-impossible/: pyproject.toml
tests/smoke/fixture-two-goal/: pyproject.toml
(+17 files in other folders)
