[project]
name = "claude-autopilot"
version = "0.2.2"
description = "Autonomous project session orchestrator for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["claude", "claude-code", "ai", "automation", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/timainge/autopilot"
Documentation = "https://timainge.github.io/autopilot"
Repository = "https://github.com/timainge/autopilot"
"Bug Tracker" = "https://github.com/timainge/autopilot/issues"
Changelog = "https://github.com/timainge/autopilot/releases"

[project.scripts]
autopilot = "autopilot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autopilot"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "twine>=5.0",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-shadcn>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
